Corrections for deployment

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-fluid">
           <div class="d-flex align-items-center justify-content-center">
             <a class="navbar-brand" href="#">
-              <img src="/img/icon.svg" alt="icon">
+              <img src="img/icon.svg" alt="icon">
             </a>
             <div class="dropdown">
               <button class="btn btn-language dropdown-toggle-split" type="button" id="dropdownMenuButton1"
@@ -90,13 +90,13 @@
               <div class="salary__visa d-flex">
                 <div class="salary__visa-text s-text d-flex align-items-center">Сервис создан при поддержке
                 </div>
-                <img src="/img/visa-logo.svg" alt="visa-logo">
+                <img src="img/visa-logo.svg" alt="visa-logo">
               </div>
             </div>
           </div>
           <div class="salary__image mb-l">
-            <img class="salary__image-visibility-1" src="/img/about-project-image.svg" alt="about-project-image">
-            <img class="salary__image-visibility-2" src="/img/about-project-mobile.svg" alt="about-project-image">
+            <img class="salary__image-visibility-1" src="img/about-project-image.svg" alt="about-project-image">
+            <img class="salary__image-visibility-2" src="img/about-project-mobile.svg" alt="about-project-image">
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
                   <div class="works__rounded col justify-content-start">
                     <div class="cash-out">
                       <div class="d-flex">
-                        <img class="works__img" src="/img/card.svg" alt="card">
+                        <img class="works__img" src="img/card.svg" alt="card">
                         <div>
                           <div class="works__text">Снять деньги</div>
                           <h6 class="s-text">Снимайте доступные деньги</h6>
@@ -129,13 +129,13 @@
                       </div>
                       <div class="dashed-line"></div>
                       <div class="cash-out__funds">
-                        <div class="cash-out__funds-text mb-3">12 000 <img src="/img/UAH.svg" alt="UAH" class="mx-auto">
+                        <div class="cash-out__funds-text mb-3">12 000 <img src="img/UAH.svg" alt="UAH" class="mx-auto">
                         </div>
                         <h6 class="s-text">Доступные средства для снятия</h6>
                       </div>
                       <button class="cash-out__btn btn btn-green" type="button">Снять деньги</button>
                     </div>
-                    <img class="works__cash-out-man" src="/img/cash-out-man.svg" alt="cash-out-man">
+                    <img class="works__cash-out-man" src="img/cash-out-man.svg" alt="cash-out-man">
                   </div>
                 </div>
                 <div class="tab-pane fade" id="v-pills-statistic" role="tabpanel"
@@ -143,7 +143,7 @@
                   <div class="works__rounded col justify-content-start">
                     <div class="works__inner">
                       <div class="d-flex">
-                        <img class="works__img" src="/img/statistic-horizontal.svg" alt="statistic">
+                        <img class="works__img" src="img/statistic-horizontal.svg" alt="statistic">
                         <div>
                           <div class="works__text">Статистика</div>
                           <h6 class="s-text">Ваша активность в системе</h6>
@@ -157,7 +157,7 @@
                             <div class="col-md-6 d-flex flex-column">
                               <div class="row h-100 mb-sm">
                                 <div class="col d-flex">
-                                  <img class="works__icon" src="/img/vacation.svg" alt="vacation">
+                                  <img class="works__icon" src="img/vacation.svg" alt="vacation">
                                   <div>
                                     <p class="s-text">Отпускные</p>
                                     <p class="xs-text">29.02.2021</p>
@@ -166,7 +166,7 @@
                               </div>
                               <div class="row h-100 mb-sm">
                                 <div class="col d-flex">
-                                  <img class="works__icon" src="/img/output.svg" alt="output">
+                                  <img class="works__icon" src="img/output.svg" alt="output">
                                   <div>
                                     <p class="s-text">Вывод средств</p>
                                     <p class="xs-text">24.02.2021</p>
@@ -175,7 +175,7 @@
                               </div>
                               <div class="row h-100 mb-sm">
                                 <div class="col d-flex">
-                                  <img class="works__icon" src="/img/premium.svg" alt="premium">
+                                  <img class="works__icon" src="img/premium.svg" alt="premium">
                                   <div>
                                     <p class="s-text">Премия</p>
                                     <p class="xs-text">18.02.2021</p>
@@ -184,7 +184,7 @@
                               </div>
                               <div class="row h-100 mb-sm">
                                 <div class="col d-flex">
-                                  <img class="works__icon" src="/img/prepayment.svg" alt="prepayment">
+                                  <img class="works__icon" src="img/prepayment.svg" alt="prepayment">
                                   <div>
                                     <p class="s-text">Выплата за перву</p>
                                     <p class="xs-text">15.02.2021</p>
@@ -193,7 +193,7 @@
                               </div>
                               <div class="row h-100 mb-sm">
                                 <div class="col d-flex">
-                                  <img class="works__icon" src="/img/output.svg" alt="output">
+                                  <img class="works__icon" src="img/output.svg" alt="output">
                                   <div>
                                     <p class="s-text">Вывод средств</p>
                                     <p class="xs-text">14.02.2021</p>
@@ -202,7 +202,7 @@
                               </div>
                               <div class="row h-100 mb-sm">
                                 <div class="col d-flex">
-                                  <img class="works__icon" src="/img/sick.svg" alt="sick">
+                                  <img class="works__icon" src="img/sick.svg" alt="sick">
                                   <div>
                                     <p class="s-text">Больничный</p>
                                     <p class="xs-text">01.12.2020</p>
@@ -243,7 +243,7 @@
                   role="tab" aria-controls="v-pills-output" aria-selected="true">
                   <div class="output d-flex flex-row">
                     <div class="output__inner">
-                      <img src="/img/card.svg" alt="output-salary-card">
+                      <img src="img/card.svg" alt="output-salary-card">
                       <h4 class="ml-text mb-m">Выводите зарплату</h4>
                       <p class="m-text">Не ждите даты выдачи зарплаты, теперь вы можете ее получать в любой день!
                         Выводить
@@ -257,7 +257,7 @@
                   role="tab" aria-controls="v-pills-statistic" aria-selected="false">
                   <div class="statistic d-flex flex-row">
                     <div class="statistic__inner">
-                      <img src="/img/statistic.svg" alt="statistic">
+                      <img src="img/statistic.svg" alt="statistic">
                       <h4 class="ml-text mb-m">Доступ к статистике</h4>
                       <p class="m-text">Каждый день вы получаете обновленную статистику по вашей зарплате.
                       </p>
@@ -303,7 +303,7 @@
                 <div class="col">
                   <div class="card-border benefits__credit-card card h-100 text-center">
                     <div class="card-body p-4">
-                      <img src="/img/card.svg" alt="card">
+                      <img src="img/card.svg" alt="card">
                       <h4 class="ml-text mb-m">Доступ к деньгам</h4>
                       <p class="m-text">Вы можете просматривать свой доступный баланс на зарплатном счету и
                         перевести
@@ -314,7 +314,7 @@
                 <div class="col">
                   <div class="card-border benefits__statistic card h-100 text-center">
                     <div class="card-body p-4">
-                      <img src="/img/statistic-red.svg" alt="statistic-red">
+                      <img src="img/statistic-red.svg" alt="statistic-red">
                       <h4 class="ml-text mb-m">Статистика дохода</h4>
                       <p class="m-text">Детальная статистика начислений зарплаты и снятия средств позволяет
                         понимать
@@ -325,7 +325,7 @@
                 <div class="col">
                   <div class="card-border benefits__check card h-100 text-center">
                     <div class="card-body p-4">
-                      <img src="/img/check.svg" alt="check">
+                      <img src="img/check.svg" alt="check">
                       <h4 class="ml-text mb-m">Доступ везде и всегда</h4>
                       <p class="m-text">“Зарплата каждый день” - это онлайн сервис. Вам необходимо только
                         подключение
@@ -356,12 +356,12 @@
                 доступ к
                 зарплате</p>
               <div class="mb-m">
-                <img src="/img/walmart.svg" alt="walmart">
-                <img src="/img/mazda.svg" alt="mazda">
-                <img src="/img/burger-king.svg" alt="burger-king">
-                <img src="/img/mcdonalds.svg" alt="mcdonalds">
-                <img src="/img/dominos.svg" alt="dominos">
-                <img src="/img/disney.svg" alt="disney">
+                <img src="img/walmart.svg" alt="walmart">
+                <img src="img/mazda.svg" alt="mazda">
+                <img src="img/burger-king.svg" alt="burger-king">
+                <img src="img/mcdonalds.svg" alt="mcdonalds">
+                <img src="img/dominos.svg" alt="dominos">
+                <img src="img/disney.svg" alt="disney">
               </div>
               <p class="m-text mb-m">Это позволяет увеличить удовлетворенность рабочими условиями, увеличивает
                 взаимное <br>
@@ -412,8 +412,8 @@
                   Внутрішньодержавної небанківської платіжної системи «Фінансовий світ» (договір №14 від 11.12.2013
                   року) та до Міжнародної системи грошових переказів «АVERS» (договір № 126/2014 від 06.10.2014 року).
                   <div>
-                    <img src="/img/certificate.png" alt="certificate">
-                    <img src="/img/license.png" alt="license">
+                    <img src="img/certificate.png" alt="certificate">
+                    <img src="img/license.png" alt="license">
                   </div>
                 </div>
               </div>
@@ -444,7 +444,7 @@
             <div class="col">
               <div class="card-border card-telegram card h-100 text-center">
                 <div class="card-body">
-                  <img class="q-and-a__img" src="/img/telegram.svg" alt="telegram">
+                  <img class="q-and-a__img" src="img/telegram.svg" alt="telegram">
                   <h5 class="card-text m-text">Telegram</h5>
                 </div>
               </div>
@@ -452,7 +452,7 @@
             <div class="col">
               <div class="card-border card-viber card h-100 text-center">
                 <div class="card-body">
-                  <img class="q-and-a__img" src="/img/viber.svg" alt="viber">
+                  <img class="q-and-a__img" src="img/viber.svg" alt="viber">
                   <h5 class="card-text m-text">Viber</h5>
                 </div>
               </div>
@@ -460,7 +460,7 @@
             <div class="col">
               <div class="card-border card-facebook card h-100 text-center">
                 <div class="card-body">
-                  <img class="q-and-a__img" src="/img/facebook.svg" alt="facebook">
+                  <img class="q-and-a__img" src="img/facebook.svg" alt="facebook">
                   <h5 class="card-text m-text">Facebook</h5>
                 </div>
               </div>
@@ -473,7 +473,7 @@
     <section class="contact" id="contact">
       <div class="container">
         <div class="text-center mb-m">
-          <img class="contact__img" src="/img/icon.svg" alt="icon">
+          <img class="contact__img" src="img/icon.svg" alt="icon">
           <h2 class="xl-text">Контакты</h2>
           <p class="m-text">Первый сервис в Украине, с которым сотрудники могут получить <br> зарплату в любом месте и
             в
@@ -489,12 +489,12 @@
                     <p class="m-text">Для сотрудника</p>
                     <div class="horizontal-line"></div>
                   </div>
-                  <img class="contact__email-img" src="/img/email-contact.svg" alt="email-contact">
+                  <img class="contact__email-img" src="img/email-contact.svg" alt="email-contact">
                   <div class="contact__email">
                     <a class="remove-link-styles mb-2" href="mailto:help@ewa.com">help@ewa.com</a>
                     <p class="s-text">Пишите нам на email</p>
                   </div>
-                  <img src="/img/phone-contact.svg" alt="phone-contact">
+                  <img src="img/phone-contact.svg" alt="phone-contact">
                   <div class="contact__phone">
                     <a class="remove-link-styles mb-2" href="tel:+380447772250">+380 (44) 777 22 50</a>
                     <p class="s-text">с 9.00 до 21.00</p>
@@ -510,12 +510,12 @@
                     <p class="m-text">Для работодателя</p>
                     <div class="horizontal-line"></div>
                   </div>
-                  <img class="contact__email-img" src="/img/email-contact.svg" alt="email-contact">
+                  <img class="contact__email-img" src="img/email-contact.svg" alt="email-contact">
                   <div class="contact__email">
                     <a class="remove-link-styles mb-2" href="mailto:partner@ewa.com">partner@ewa.com</a>
                     <p class="s-text">Пишите нам на email</p>
                   </div>
-                  <img src="/img/phone-contact.svg" alt="phone-contact">
+                  <img src="img/phone-contact.svg" alt="phone-contact">
                   <div class="contact__phone">
                     <a class="remove-link-styles mb-2" href="tel:+380445021160">+380 (44) 502 11 60</a>
                     <p class="s-text">с 9.00 до 21.00</p>
