--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <div class="d-flex align-items-center justify-content-center">
+          <div class="d-flex justify-content-center align-items-center">
             <a class="navbar-brand" href="#">
               <img src="img/icon.svg" alt="icon">
             </a>
@@ -40,7 +40,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav align-items-center">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="#works">Как это работает</a>
               </li>
@@ -51,6 +51,9 @@
                 <a class="nav-link" href="#q-and-a">Вопросы и ответы</a>
               </li>
             </ul>
+
+          </div>
+          <div class="collapse navbar-collapse">
             <button class="btn btn-green" type="button">Войти</button>
           </div>
         </div>
@@ -299,7 +302,7 @@
           <div class="tab-pane fade show active" id="pills-employees" role="tabpanel"
             aria-labelledby="pills-employees-tab">
             <div class="benefits__cards d-flex">
-              <div class="row flex flex-row gap-3">
+              <div class="row flex-row gap-3">
                 <div class="col">
                   <div class="card-border benefits__credit-card card h-100 text-center">
                     <div class="card-body p-4">
@@ -480,7 +483,7 @@
             любое время.
           </p>
         </div>
-        <div class="container contact__cards">
+        <div class="contact__cards">
           <div class="row justify-content-between">
             <div class="col-md-6 d-flex">
               <div class="card flex-fill mb-3 card-border text-center mb-l">
