Small changes in styles (cursor and color of cards when hovering)

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <h3 class="l-text mb-m">Ускорьте процесс подключения вашей <br> компании к сервису "Зарплата каждый
                   день"
                 </h3>
-                <button class="btn btn-dark mb-m" data-bs-toggle="modal" data-bs-target="#staticBackdropEmployee">
+                <button class="btn btn-black mb-m" data-bs-toggle="modal" data-bs-target="#staticBackdropEmployee">
                   Оставить
                   заявку
                 </button>
@@ -257,7 +257,7 @@
                 взаимное <br>
                 доверие между
                 работадатеолем и сотрудником, а так же увеличивает финансовое <br> благополучие сотрудников.</p>
-              <button class="btn btn-dark benefits__btn" type="button" data-bs-toggle="modal"
+              <button class="btn btn-black benefits__btn" type="button" data-bs-toggle="modal"
                 data-bs-target="#staticBackdropEmployer">Подключиться
               </button>
             </div>
@@ -394,7 +394,7 @@
                 <a class="remove-link-styles mb-2" href="tel:+380445021160">+380 (44) 502 11 60</a>
                 <p class="s-text">с 9.00 до 21.00</p>
               </div>
-              <button class="contact__btn btn btn-dark" type="button" data-bs-toggle="modal"
+              <button class="contact__btn btn btn-black" type="button" data-bs-toggle="modal"
                 data-bs-target="#staticBackdropEmployer">Подключиться
               </button>
             </div>
@@ -462,7 +462,7 @@
                     </label>
                   </div>
                   <div class="modal-submit justify-content-center">
-                    <input class="btn btn-dark modal-width" type="submit" value="Отправить" data-bs-dismiss="modal" />
+                    <input class="btn btn-black modal-width" type="submit" value="Отправить" data-bs-dismiss="modal" />
                   </div>
                 </form>
               </div>
@@ -502,7 +502,7 @@
                     placeholder="Номер телефона"
                     aria-label="Phone">
                   <div class="modal-submit justify-content-center text-center">
-                    <input class="btn btn-dark mb-m modal-width" type="submit" value="Отправить"
+                    <input class="btn btn-black mb-m modal-width" type="submit" value="Отправить"
                       data-bs-dismiss="modal" />
                     <p class="m-text modal-width">Подключение полностью бесплатное</p>
                   </div>
