Changes in the question and answer block (using rows and columns)

--- a/index.html
+++ b/index.html
@@ -267,87 +267,93 @@
     </section>
 
     <section class="q-and-a" id="q-and-a">
-      <div class="q-and-a__margin">
-        <div class="d-flex flex-column align-items-center">
-          <h2 class="xl-text mb-xl">Вопросы и ответы</h2>
-          <div class="accordion w-100" id="accordion">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button sm-text" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
-                  Что требуется для подключения?
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body m-text">
-                  Какой-то текст про то что требуется для подключения.
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12 mb-xl">
+            <h2 class="xl-text">Вопросы и ответы</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-11">
+            <div class="accordion w-100" id="accordion">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button sm-text" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Что требуется для подключения?
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body m-text">
+                    Какой-то текст про то что требуется для подключения.
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed sm-text" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  ООО ФК "УНИВЕРСАЛЬНЫЕ ПЛАТЕЖНЫЕ СИСТЕМЫ"
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body m-text">
-                  ФК ТОВ «УНІВЕРСАЛЬНІ ПЛАТІЖНІ РІШЕННЯ» - фінансова установа, зареєстрована У встановленому
-                  законодавством України порядку, яка надає послуги на підставі Ліцензії НБУ (№ 3 від 11.11.2013 року)
-                  на переказ грошових коштів.Також ФК ТОВ «УНІВЕРСАЛЬНІ ПЛАТІЖНІ РІШЕННЯ» приєдналася до
-                  Внутрішньодержавної небанківської платіжної системи «Фінансовий світ» (договір №14 від 11.12.2013
-                  року) та до Міжнародної системи грошових переказів «АVERS» (договір № 126/2014 від 06.10.2014 року).
-                  <div>
-                    <img src="img/certificate.png" alt="certificate">
-                    <img src="img/license.png" alt="license">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed sm-text" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    ООО ФК "УНИВЕРСАЛЬНЫЕ ПЛАТЕЖНЫЕ СИСТЕМЫ"
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body m-text">
+                    ФК ТОВ «УНІВЕРСАЛЬНІ ПЛАТІЖНІ РІШЕННЯ» - фінансова установа, зареєстрована У встановленому
+                    законодавством України порядку, яка надає послуги на підставі Ліцензії НБУ (№ 3 від 11.11.2013 року)
+                    на переказ грошових коштів.Також ФК ТОВ «УНІВЕРСАЛЬНІ ПЛАТІЖНІ РІШЕННЯ» приєдналася до
+                    Внутрішньодержавної небанківської платіжної системи «Фінансовий світ» (договір №14 від 11.12.2013
+                    року) та до Міжнародної системи грошових переказів «АVERS» (договір № 126/2014 від 06.10.2014 року).
+                    <div>
+                      <img src="img/certificate.png" alt="certificate">
+                      <img src="img/license.png" alt="license">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed sm-text" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Как работает онлайн сервис “Зарплата каждый день”
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body m-text">
+                    Какой-то текст про то как работает онлайн сервис “Зарплата каждый день”
                   </div>
                 </div>
               </div>
             </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed sm-text" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Как работает онлайн сервис “Зарплата каждый день”
-                </button>
-              </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body m-text">
-                  Какой-то текст про то как работает онлайн сервис “Зарплата каждый день”
-                </div>
-              </div>
-            </div>
           </div>
-          <div class="q-and-a__email sm-text">Если у вас остались вопросы пишите нам <a class="remove-link-styles"
+        </div>
+        <div class="row text-center">
+          <p class="sm-text q-and-a__email">Если у вас остались вопросы пишите нам <a class="remove-link-styles"
             href="mailto:help@ewa.com">help@ewa.com</a>
-          </div>
-          <div class="text-center">
-            <h2 class="xl-text mb-m">Узнайте больше</h2>
-            <p class="m-text mb-m">Задавайте любые вопросы нашим специалистам <br> удобным для вас способом</p>
-          </div>
-          <div class="d-flex">
-            <div class="card-border card-telegram card h-100 text-center">
-              <div class="card-body">
-                <img class="q-and-a__img" src="img/telegram.svg" alt="telegram">
-                <h5 class="card-text m-text">Telegram</h5>
-              </div>
+          </p>
+          <h2 class="xl-text mb-m">Узнайте больше</h2>
+          <p class="m-text mb-m">Задавайте любые вопросы нашим специалистам <br> удобным для вас способом</p>
+        </div>
+        <div class="row justify-content-center">
+          <div class="card-border card-telegram card h-100 text-center">
+            <div class="card-body">
+              <img class="q-and-a__img" src="img/telegram.svg" alt="telegram">
+              <h5 class="card-text m-text">Telegram</h5>
             </div>
-            <div class="card-border card-viber card h-100 text-center">
-              <div class="card-body">
-                <img class="q-and-a__img" src="img/viber.svg" alt="viber">
-                <h5 class="card-text m-text">Viber</h5>
-              </div>
+          </div>
+          <div class="card-border card-viber card h-100 text-center">
+            <div class="card-body">
+              <img class="q-and-a__img" src="img/viber.svg" alt="viber">
+              <h5 class="card-text m-text">Viber</h5>
             </div>
-            <div class="card-border card-facebook card h-100 text-center">
-              <div class="card-body">
-                <img class="q-and-a__img" src="img/facebook.svg" alt="facebook">
-                <h5 class="card-text m-text">Facebook</h5>
-              </div>
+          </div>
+          <div class="card-border card-facebook card h-100 text-center">
+            <div class="card-body">
+              <img class="q-and-a__img" src="img/facebook.svg" alt="facebook">
+              <h5 class="card-text m-text">Facebook</h5>
             </div>
           </div>
         </div>
